# fantasy-ranking

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  main.py  points.sqlite  pyproject.toml  requirements.txt
data/: points.sqlite  pointsv2-maybenewer.sqlite  pointsv2.sqlite
flaskr/: __init__.py
flaskr/static/: more-stats.js  more-stats2.js  more-stats3.js  style.css
flaskr/templates/: points-overview.html  stats-overview.html  stats-overview2.html  template.html
hltv/: background_update.py  helpers.py
hltv-postmessage/: manifest.json  stats.js
src/: fantasy_ranking.py
src/flaskr/: __init__.py
src/flaskr/static/: plotly-2.27.0.min.js  sorttable.js  style.css
src/flaskr/templates/: points-overview-old.html  points-overview.html  points.sqlite  stats-overview.html
src/hltv/: background_update.py  helpers.py
test/: test1-fantasy-overview.py  test2-grab-teams.py  test3-1-player-stats.py  test3-2-more-player-stats.py  test4-migrate-old-db.py  test6-get-data.py  test7-get-player-team.py
