[build-system]
requires = ["setuptools", "build", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fantasy-ranking"
requires-python = "==3.*"
readme = "README.md"
dynamic = ["dependencies", "version"]

[tool.setuptools_scm]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

